--- a/.github/workflows/python_deploy.yml
+++ b/.github/workflows/python_deploy.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+#        pip install -r requirements.txt
 
     - name: Run Hello World App
       run: python hello.py
