--- a/.github/workflows/python_deploy.yml
+++ b/.github/workflows/python_deploy.yml
@@ -26,4 +26,4 @@ jobs:
 #        pip install -r requirements.txt
 
     - name: Run Hello World App
-      run: python hello.py
+      run: python run.py
